infrastructure/gatekeeper/overlays/prod/constraints/required-labels-prod.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: must-have-required-labels
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: [""]
        kinds: ["Service"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system
      - metallb-system
  parameters:
    labels:
      - "app.kubernetes.io/managed-by"
      - "app.kubernetes.io/part-of"
      - "app.kubernetes.io/name"
  # Production - enforce strictly
  enforcementAction: deny
