infrastructure/gatekeeper/overlays/prod/constraints/resource-limits-prod.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sResourceLimits
metadata:
  name: must-have-resource-limits
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system
      - metallb-system
  parameters:
    cpu: "1000m"
    memory: "1Gi"
  # Production - enforce resource limits
  enforcementAction: deny
